--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.2"
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
   }
 }
 </script>
@@ -101,6 +102,7 @@
 </head>
   <body class="bg-zinc-950">
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
